tdf#133702 DOCX export: fix frame anchor position

On saving a frame from Writer the anchor moves to the next
paragraph, moving the whole frame lower in the document.

Co-authored-by: Attila Szűcs (NISZ)
Change-Id: Ic47becb323282500871d825c12330b328f5059d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99673
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>